升级springboot版本，升级ES版本，修改yml配置，修改搜索逻辑，修改实体类与ES的映射

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,19 +2,19 @@
 server:
   port: 8080
 
-  spring:
-    elasticsearch:
-      # ES 的连接地址，多个地址使用 , 分割
-      uris: localhost:9200
-      # 用户名
-      username:
-      # 密码
-      password:
-      # 连接超时时间
-      connection-timeout: 1000
-      # 读取超时时间
-      read-timeout: 1000
+spring:
+  elasticsearch:
+    uris: 10.83.40.232:9200
+    # 用户名
+    username:
+    # 密码
+    password:
+    # 连接超时时间
+    connection-timeout: 1000
 
   logging:
     level:
       root: info
+
+file:
+  tempFilePath: /temp
